# spectrumapp

./: .coveragerc  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
demo/: demo-empty-app.py  demo-graph-widget.py  demo-main-window.py  demo-progress-window.py  demo-report-issue-window.py  demo-splash-screen-window.py
demo/utils/: __init__.py  utils.py
spectrumapp/: __init__.py  app.py  application.py  config.py  decorators.py  file.py  helpers.py  numbers.py  paths.py  settings.py  types.py
spectrumapp/colors/: __init__.py  alpha.py  color.py
spectrumapp/config/: __init__.py  config.py  file.py
spectrumapp/core/: __init__.py  color.py  config.py  configs.py  exception.py  exceptions.py  logging.py  loggings.py  number.py  setting.py  settings.py  utils.py
spectrumapp/exceptions/: __init__.py  exceptions.py
spectrumapp/loggers/: __init__.py  decorators.py  loggers.py
spectrumapp/settings/: __init__.py  directory.py  settings.py
spectrumapp/utils/: __init__.py  decorating.py  find.py  finder.py  getter.py  modifier.py  setup.py  setuper.py
spectrumapp/widget/: canvas.py  graphWidget.py
spectrumapp/widgets/foldWidget/: __init__.py  foldWidget.py
spectrumapp/widgets/graphWidget/: __init__.py  canvas.py  graphWidget.py
spectrumapp/window/: exceptionWindow.py  messageWindow.py  splashScreenWindow.py  window.py
spectrumapp/windows/: __init__.py  exceptionWindow.py  mainWindow.py  messageWindow.py  reportIssueWindow.py  splashScreenWindow.py  window.py
spectrumapp/windows/keyboardShortcutsWindow/: __init__.py  keyboardShortcutsWindow.py
spectrumapp/windows/progressWindow/: __init__.py  decorators.py  progressWindow.py
spectrumapp/windows/reportIssueWindow/: __init__.py  archiver.py  delivery.py  exceptions.py  reportIssueWindow.py  utils.py
spectrumapp/windows/splashScreenWindow/: __init__.py  decorators.py  splashScreenWindow.py
src/demo/: demo-splash-screen-window.py
src/spectrumapp/: __init__.py  application.py  decorators.py  helpers.py  numbers.py  paths.py  types.py
src/spectrumapp/colors/: __init__.py  alpha.py  alphasets.py  color.py  colorsets.py
src/spectrumapp/config/: __init__.py  abstract_config.py  base_config.py  config.py  file.py
src/spectrumapp/configs/: __init__.py  base_config.py  telegram_config.py
src/spectrumapp/exceptions/: __init__.py  utils.py
src/spectrumapp/loggers/: decorators.py
src/spectrumapp/settings/: __init__.py  _directory.py  settings.py
static/: app.css  progress-window.css  splash-screen-window.css
tests/: conftest.py  test_file.py
tests/application/: test_application.py
tests/colors/: test_alpha.py  test_color.py
tests/config/: conftest.py  test_config.py  test_file.py
tests/exceptions/: conftest.py
tests/numbers/: test_format_number.py  test_truncate_number.py
tests/pave/: test_pave.py
(+99 files in other folders)
