[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spectrumapp"
version = "1.1.0"
authors = [
    {name = "Pavel Vaschenko", email="vaschenko@vmk.ru"},
]
maintainers = [
    {name = "Pavel Vaschenko", email="vaschenko@vmk.ru"},
]
readme = "README.md"
license = {text = "MIT License"}
dependencies = [
    "matplotlib==3.9.0",
    "numpy==2.1.3",
    "pandas==2.2.3",
    "pydantic==2.11.1",
    "pydantic-settings==2.8.1",
    "pyside6==6.8.1",
    "telepot==12.7",
]
requires-python = ">=3.12"

[dependency-groups]
linting = [
    "flake8",
    "flake8-commas",
    "flake8-import-order",
    "flake8-bugbear",
    "flake8-builtins",
    "pep8-naming",
]
testing = [
    "pytest",
    "pytest-cov",
    "pytest-faker>=2.0.0",
    "pytest-flake8",
    "pytest-mock",
    "pytest-repeat>=0.9.4",
    "pytest-qt>=4.5.0",
]
dev = [
    {include-group = "linting"},
    {include-group = "testing"},
]
